--- a/Freedom/Freedom/KeyboardViewController.xib
+++ b/Freedom/Freedom/KeyboardViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -64,7 +64,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="53" id="oGh-Vy-tg4"/>
                     </constraints>
-                    <state key="normal" title="C">
+                    <state key="normal" title="清空">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
@@ -166,7 +166,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="53" id="NCA-YN-nBw"/>
                     </constraints>
-                    <state key="normal" title="~">
+                    <state key="normal" title="退格">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
@@ -175,7 +175,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="53" id="T0Z-qI-owN"/>
                     </constraints>
-                    <state key="normal" title="OK">
+                    <state key="normal" title="完成">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
